2004-09-19  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* doc/*: Standardize style of references to manual sections and public
	Tcl symbols along the lines of what I set out in [Tcl Patch 1022527].

2004-09-18  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/tkWinWm.c (WmAttributesCmd): correct -alpha 0.0/1.0 setting
	and round the value.
	(UpdateWrapper): don't adjust Z order of TOPMOST window.
	(WmAttributesCmd): don't call UpdateWrapper for -disabled or
	-toolwindow attr changes.

2004-09-17  Jeff Hobbs  <jeffh@ActiveState.com>

	* doc/wm.n:
	* tests/winWm.test: Add 'wm attributes -alpha' to control toplevel
	* win/tkWinInt.h:   alpha transparency on Win2K/XP+.
	* win/tkWinWm.c:    TIP #222 [Patch 892194]

	* win/tkWinWm.c (UpdateWrapper): Ensure that we maintain Z order
	* tests/winWm.test:              and focus of preexisting window
	when replacing the wrapper window.

2004-09-16  David Gravereaux <davygrvy@pobox.com>

	* win/makefile.vc : added VC7-safe environment check as used in the
	Tcl makefile.vc [Bug 1029349]

2004-09-16  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tkMenu.c (MenuWorldChanged): ensure that we recompute
	the menu geometry on WorldChanged to handle font size
	changes. [Bug 607649]

2004-09-16  Peter Spjuth  <peter.spjuth@space.se>

	* tests/place.test:
	* generic/tkPlace.c: Fixed a memory leak when a placed widget was
	forgotten. [Bug 1028888]

2004-09-14  Mo DeJong  <mdejong@users.sourceforge.net>

	* win/tkWinWm.c (WmIconwindowCmd): Replace bogus
	call to XWithdrawWindow with proper code. This
	avoids a "couldn't send withdraw message to window manager"
	error when the iconwindow is already mapped.
	The wm iconwindow command does not seem to do much
	under Win32, but at least this avoids an error message.

2004-09-13  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/tkWinWm.c (ReadIconFromFile): fix mem alloc to get the right
	size for both icons ('?:' order of precedence mistake).
