@@ -1,3 +1,9 @@
+2004-09-20  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* win/tkWinWm.c (UpdateWrapper, WmAttributesCmd): handle attribute
+	settings prior to window mapping and resort to more forceful
+	wrapper update again for -toolwindow (to remove it from taskbar).
+
 2004-09-19  Donal K. Fellows  <donal.k.fellows@man.ac.uk>
 
 	* doc/*: Standardize style of references to manual sections and public
